# Data_Engineer

./: README.md  create_table.sql  main.py  mlb.py  mysql.yml  pull_test_file  pyproject.toml  readme.md  setup.py  tasks.py
financialdata_v/: clients.py  router.py  twse_crawler.py
src/: taiwan_stock_price_twse_2021-03-22.csv  taiwan_stock_price_twse_2021-03-23.csv  try.py  twse_crawler.py
