[tool.poetry]
name = "test_package"
version = "0.1.0"
description = ""
authors = ["andy.hsu <datatwins2023@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "2.0.1"
requests = "^2.31.0"
pydantic = "^2.3.0"
loguru = "^0.7.0"
pandas = "0.25.3"
tqdm = "^4.66.1"
financialdata = "^0.5"
SQLAlchemy = "1.4.35"
pymysql = "^1.1.0"
celery = "5.2.3"
fastapi = "^0.103.1"
uvicorn = "0.14.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
